Fixed z-index

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -64,6 +64,7 @@
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 2;
     transform: translate(-50%, -50%);
 }
 
